@@ -1,8 +1,10 @@
 2016-12-08  Dirk Eddelbuettel  <edd@debian.org>
 
-	* NAMESPACE: Register (unexported) makeRaw S3 methods
+	* NAMESPACE: Register (and exported) makeRaw S3 methods
 
-	* tests/hmacTest.R: Better call to digest:::makeRaw
+	* man/makeRaw.Rd: New manual page
+
+	* tests/hmacTest.R: Direct call to makeRaw()
 	* tests/hmacTest.Rout.save: Ditto
 
 	* src/digest.c: Additional #nocov tags
